# langchain-markitdown

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: examples.ipynb
src/langchain_markitdown/: __init__.py  base_loader.py  docx_loader.py  pptx_loader.py  rtf_loader.py  utils.py
src/markitdown_langchain/: __init__.py  base_loader.py  docx_loader.py  pptx_loader.py  utils.py  xlsx_loader.py
test_data/: 028AAF00  7B1AAF00  test_docx.docx  test_xlsx.xlsx  ~$st_docx.docx
tests/: conftest.py  test_base_loader.py  test_loaders.py
