[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markitdown-langchain"
version = "0.1.0"
description = "A project that integrates Markdown with LangChain."
authors = [
    { name = "Nathan Sasto", email = "nathan@decisiondecoder.net" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "langchain_core",
    "markitdown[all]",
    "langchain-text-splitters",

]

[tool.setuptools.packages.find]
where = ["src"]